# gemini-openapi-spec

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: repo-validation.yml  upstream-drift.yml
openapi/: gemini-api.openapi.json  gemini-native.openapi.json  gemini-openai-compat.openapi.json
reports/: compat-watchlist.md  drift-summary.json  drift-summary.md  openai-compat-diff-report.json  openai-compat-surface.json  openai-compat-validation-report.json  openapi-lint-report.json  python-genai-surface.json  source-drift-report.json  validation-report.json
scripts/: _gemini_common.py  build_openai_compat.py  build_openapi.py  extract_openai_compat_surface.py  extract_python_genai_surface.py  generate_drift_reports.py  lint_openapi.py  native_schema_registry.py  refresh_sources.py  update-all.sh  validate_openai_compat.py  validate_schema.py  validate_surface.py
sources/discovery/: openapi3_0.json
sources/docs/: all-methods.html  all-methods.json  batch-guide.html  batch-guide.json  file-search-documents-reference.html  file-search-documents-reference.json  file-search-stores-reference.html  file-search-stores-reference.json  files-guide.html  files-guide.json  generate-content-reference.html  generate-content-reference.json  models-reference.html  models-reference.json  openai-compat.html  palm-reference.html  palm-reference.json  (+6 more)
tests/: conftest.py  test_compat_pruning.py  test_doc_parsing.py  test_generate_drift_reports.py  test_path_normalization.py  test_schema_registry.py
